@@ -187,6 +187,24 @@ button_put_color(fts_daemon_action_t action, fts_object_t *obj,
   this->color = fts_get_int(value);
 }
 
+static void button_save_dotpat(fts_object_t *o, int winlet, fts_symbol_t s, int ac, const fts_atom_t *at)
+{
+  FILE *file;
+  int x, y, w;
+  fts_atom_t a;
+
+  file = (FILE *)fts_get_ptr( at);
+
+  fts_object_get_prop( o, fts_s_x, &a);
+  x = fts_get_int( &a);
+  fts_object_get_prop( o, fts_s_y, &a);
+  y = fts_get_int( &a);
+  fts_object_get_prop( o, fts_s_width, &a);
+  w = fts_get_int( &a);
+
+  fprintf( file, "#P button %d %d %d;\n", x, y, w);
+}
+
 
 /************************************************
  *
@@ -197,27 +215,30 @@ button_put_color(fts_daemon_action_t action, fts_object_t *obj,
 static fts_status_t
 button_instantiate(fts_class_t *cl, int ac, const fts_atom_t *at)
 {
-  fts_symbol_t a[1];
+  fts_type_t t[1];
 
   fts_class_init(cl, sizeof(button_t), 1, 1, 0);
 
-  a[0] = fts_s_symbol;
-  fts_method_define(cl, fts_SystemInlet, fts_s_init, button_init, 1, a);
+  t[0] = fts_t_symbol;
+  fts_method_define(cl, fts_SystemInlet, fts_s_init, button_init, 1, t);
   fts_method_define(cl, fts_SystemInlet, fts_s_delete, button_delete, 0, 0);
 
   fts_method_define(cl, fts_SystemInlet, fts_s_send_properties, button_send_properties, 0, 0); 
   fts_method_define(cl, fts_SystemInlet, fts_s_send_ui_properties, button_send_ui_properties, 0, 0); 
+
+  t[0] = fts_t_ptr;
+  fts_method_define( cl, fts_SystemInlet, fts_new_symbol("save_dotpat"), button_save_dotpat, 1, t); 
 
   fts_method_define(cl, fts_SystemInlet, fts_s_bang, button_bang, 0, 0);
 
   /* user methods */
   fts_method_define_varargs(cl, 0, fts_s_anything, button_bang);
 
-  a[0] = fts_s_number;
-  fts_method_define(cl, 0, fts_new_symbol("duration"), button_duration, 1, a);
+  t[0] = fts_t_number;
+  fts_method_define(cl, 0, fts_new_symbol("duration"), button_duration, 1, t);
 
-  a[0] = fts_s_int;
-  fts_method_define(cl, 0, fts_new_symbol("color"), button_color, 1, a);
+  t[0] = fts_t_int;
+  fts_method_define(cl, 0, fts_new_symbol("color"), button_color, 1, t);
 
   /* value daemons */
 
@@ -229,8 +250,8 @@ button_instantiate(fts_class_t *cl, int ac, const fts_atom_t *at)
   fts_class_add_daemon(cl, obj_property_get, fts_s_color, button_get_color);
   fts_class_add_daemon(cl, obj_property_put, fts_s_color, button_put_color);
 
-  a[0] = fts_s_int;
-  fts_outlet_type_define(cl, 0, fts_s_bang, 1, a);
+  t[0] = fts_t_int;
+  fts_outlet_type_define(cl, 0, fts_s_bang, 1, t);
 
   return fts_Success;
 }
